# backend/src/controllers/auth.controller.js
@@ -1,7 +1,7 @@
 import { asyncHandler } from "../utils/asyncHandler.js";
 import { ApiResponse } from "../utils/apiResponse.js";
 import { ApiError } from "../utils/apiError.js";
-import { loginService } from "../services/auth.service.js";
+import { loginService, logLoginService } from "../services/auth.service.js";
 
 export const login = asyncHandler(async (req, res) => {
   const { username, password } = req.body;
@@ -14,17 +14,33 @@ export const login = asyncHandler(async (req, res) => {
     req.context.username = username;
   }
 
-  // TO REMOVE: Sample Data
-  // req.context = {
-  //   correlationId: '04b071de-7a33-4672-8438-0a0f9962f7c7',
-  //   clientIp: '127.0.0.1',
-  //   startTime: 1775456654150,
-  //   batch: '20260406062414',
-  //   sequence: { value: 0 }
-  // }
-
   const data = await loginService(
     { username, password },
+    req.context
+  );
+
+  res.json(new ApiResponse({ data }));
+});
+
+export const logLogin = asyncHandler(async (req, res) => {
+  const {
+    username,
+    deviceName,
+    deviceIp,
+    loginStatus
+  } = req.body;
+
+  if (!username || !loginStatus) {
+    throw new ApiError(400, "username and loginStatus are required");
+  }
+
+  const data = await logLoginService(
+    {
+      username,
+      deviceName,
+      deviceIp,
+      loginStatus
+    },
     req.context
   );
 
