# backend/src/routes/auth.routes.js
@@ -1,7 +1,9 @@
 import express from "express";
-import { login } from "../controllers/auth.controller.js";
+import { login, logLogin } from "../controllers/auth.controller.js";
 
 const router = express.Router();
+
+router.post("/log-login", logLogin);
 
 router.post("/login", login);
 
